--- a/semantic-api/application/pom.xml
+++ b/semantic-api/application/pom.xml
@@ -35,6 +35,18 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>iscte.ico.semantic</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
