--- a/semantic-api/application/pom.xml
+++ b/semantic-api/application/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>iscte.ico.semantic</groupId>
     <artifactId>application</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>application</name>
@@ -16,6 +16,12 @@
         <kotlin.code.style>official</kotlin.code.style>
         <junit.version>4.12</junit.version>
     </properties>
+
+    <parent>
+        <groupId>iscte.ico.semantic</groupId>
+        <artifactId>semanantic-api</artifactId>
+        <version>0.1.0</version>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -38,14 +44,7 @@
         <dependency>
             <groupId>iscte.ico.semantic</groupId>
             <artifactId>domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>5.3.5</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
