--- a/semantic-api/presentation/pom.xml
+++ b/semantic-api/presentation/pom.xml
@@ -51,12 +51,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>iscte.ico.semantic</groupId>-->
-<!--            <artifactId>infrastructure</artifactId>-->
-<!--            <version>${project.version}</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>iscte.ico.semantic</groupId>
+            <artifactId>infrastructure</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
